# Oumaji_Final_Project

./: .gitignore  README.md  main.py  pyproject.toml
.github/: CODEOWNERS
Notebooks_Development/: Dockerfile  EDA.ipynb  LightGBM_PCA.ipynb  Mlforecast.ipynb  Readme.md  TFT.ipynb  docker-compose.yml  fix_meta.py  forecasting_testing.ipynb  holt_winters.ipynb  mlflow_ejemplo_registro_experimento_modelo.py  preprocessing_testing.ipynb  sarima.ipynb  sarimax.ipynb
Notebooks_Development/Demand_notebooks/: LightGBM_PCA.ipynb  Mlforecast.ipynb  TFT.ipynb
Notebooks_Development/Eda_preprocessing_notebooks/: EDA.ipynb  mlflow_ejemplo_registro_experimento_modelo.py
Notebooks_Development/Occupancy_notebooks/: ARIMAX.ipynb  Gradient_Boosting_Models.ipynb  arima.ipynb  sarima.ipynb  sarimax.ipynb
Notebooks_Development/mlruns/0/: meta.yaml
Notebooks_Development/mlruns/176230793224478268/: meta.yaml
Notebooks_Development/mlruns/176230793224478268/13fa513cc187451eab8e61fea9c649c4/: meta.yaml
Notebooks_Development/mlruns/176230793224478268/1446ffeb23574ab4897c051638668a17/: meta.yaml
Notebooks_Development/mlruns/176230793224478268/1751689cebe14bd28465f0f4c2634ff2/: meta.yaml
Notebooks_Development/mlruns/176230793224478268/18ce8269b1b446b09f57f774b1c2678f/: meta.yaml
Notebooks_Development/mlruns/176230793224478268/1d8632201da74c00bdaef9536c92a053/: meta.yaml
Notebooks_Development/mlruns/176230793224478268/30e634b3612e4511a85d8b8c5b7092fe/: meta.yaml
Notebooks_Development/mlruns/176230793224478268/320c824142be49e4a0a569c831c1a0c1/: meta.yaml
Notebooks_Development/mlruns/176230793224478268/3436813d2b5a4d368f5094ca1b5bec90/: meta.yaml
Notebooks_Development/mlruns/176230793224478268/3472419ff04f44c987347852354e57ca/: meta.yaml
Notebooks_Development/mlruns/176230793224478268/44029e6cbc91453b8f8845baf9ba5df1/: meta.yaml
Notebooks_Development/mlruns/176230793224478268/451781f670ae469fbfd7a1c14a0e69fc/: meta.yaml
Notebooks_Development/mlruns/176230793224478268/46e1ffed59ec42c4a8d27fde0ad521fb/: meta.yaml
Notebooks_Development/mlruns/176230793224478268/47b7bab401d24f249df942e6553e3ccb/: meta.yaml
Notebooks_Development/mlruns/176230793224478268/48c5208f093b4426862fcf59fe329465/: meta.yaml
Notebooks_Development/mlruns/400716610318719328/: meta.yaml
Notebooks_Development/mlruns/633372116283320291/: meta.yaml
Notebooks_Development/mlruns/models/TFT/: meta.yaml
azurepipelinedeployment/: .amlignore  .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
azurepipelinedeployment/conf/: logging.yml
azurepipelinedeployment/conf/base/: catalog.yml  parameters.yml  parameters_data_processing.yml
azurepipelinedeployment/docs/source/: conf.py  index.rst
azurepipelinedeployment/src/azurepipelinedeployment/: __init__.py  __main__.py  hooks.py  settings.py
azurepipelinedeployment/src/azurepipelinedeployment/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py
azurepipelinedeployment/src/azurepipelinedeployment/pipelines/data_science/: nodes.py  pipeline.py
azurepipelinedeployment/tests/pipelines/data_processing/: test_pipeline.py
data-preprocessing-pipeline/: README.md  pyproject.toml
data-preprocessing-pipeline/conf/: logging.yml
data-preprocessing-pipeline/conf/base/: catalog.yml
data-preprocessing-pipeline/docs/source/: conf.py  index.rst
data-preprocessing-pipeline/src/data_preprocessing_pipeline/: __init__.py  __main__.py  settings.py
front_end_dashboard_and_API/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml
front_end_dashboard_and_API/src/: helpers.py  load_data.py  main.py  make_predictions.py
front_end_dashboard_and_API/src/tabs/: fnb_bi.py  fnb_forecast.py  fnb_forecast_barplot.py  fnb_forecast_lineplot.py  occupancy_tab.py
(+656 files in other folders)
